--- a/breeze/3rdparty/gritter/css/jquery.gritter.css
+++ b/breeze/3rdparty/gritter/css/jquery.gritter.css
@@ -47,7 +47,7 @@
 	background:url(../images/gritter.png) no-repeat left -40px;
 	color:#eee;
 	padding:2px 11px 8px 11px;
-	font-size: 11px;
+	font-size: 12pt;
 }
 .hover .gritter-item {
 	background-position:right -40px;
@@ -67,7 +67,7 @@
 	height:30px;
 }
 .gritter-title {
-	font-size:14px;
+	font-size:14pt;
 	font-weight:bold;
 	padding:0 0 7px 0;
 	display:block;
@@ -103,7 +103,7 @@
 .gritter-red .gritter-top,
 .gritter-close {
     background-image: url(../images/gritter-red.png);
-    color: #222;
+    color: white;
 }
 .gritter-red .gritter-title {
     text-shadow: none;
