--- a/breeze/3rdparty/gritter/css/jquery.gritter.css
+++ b/breeze/3rdparty/gritter/css/jquery.gritter.css
@@ -28,14 +28,14 @@
 	background:url('../images/ie-spacer.gif'); /* ie7/8 fix */ 
 }
 .gritter-top {
-	background:url(../images/gritter.png) no-repeat left -30px;
+	background:url('../images/gritter.png') no-repeat left -30px;
 	height:10px;
 }
 .hover .gritter-top {
 	background-position:right -30px;
 }
 .gritter-bottom {
-	background:url(../images/gritter.png) no-repeat left bottom;
+	background:url('../images/gritter.png') no-repeat left bottom;
 	height:8px;
 	margin:0;
 }
@@ -44,10 +44,10 @@
 }
 .gritter-item {
 	display:block;
-	background:url(../images/gritter.png) no-repeat left -40px;
+	background:url('../images/gritter.png') no-repeat left -40px;
 	color:#eee;
 	padding:2px 11px 8px 11px;
-	font-size: 12pt;
+	font-size: 10pt;
 }
 .hover .gritter-item {
 	background-position:right -40px;
@@ -61,14 +61,14 @@
 	position:absolute;
 	top:5px;
 	left:3px;
-	background:url(../images/gritter.png) no-repeat left top;
+	background:url('../images/gritter.png') no-repeat left top;
 	cursor:pointer;
 	width:30px;
 	height:30px;
 }
 .gritter-title {
-	font-size:14pt;
-	font-weight:bold;
+	font-size:12pt;
+	font-weight:normal;
 	padding:0 0 7px 0;
 	display:block;
 	text-shadow:1px 1px 0 #000; /* Not supported by IE :( */
@@ -91,7 +91,7 @@
 .gritter-light .gritter-bottom,
 .gritter-light .gritter-top,
 .gritter-close {
-    background-image: url(../images/gritter-light.png);
+    background-image: url('../images/gritter-light.png');
     color: #222;
 }
 .gritter-light .gritter-title {
@@ -102,7 +102,7 @@
 .gritter-red .gritter-bottom,
 .gritter-red .gritter-top,
 .gritter-close {
-    background-image: url(../images/gritter-red.png);
+    background-image: url('../images/gritter-red.png');
     color: white;
 }
 .gritter-red .gritter-title {
