--- a/3rdparty/fileuploader/fileuploader.css
+++ b/3rdparty/fileuploader/fileuploader.css
@@ -65,7 +65,20 @@
 }
 
 .qq-upload-file {}
-.qq-upload-spinner {display:inline-block; background: url("loading.gif"); width:15px; height:15px; vertical-align:text-bottom;}
+.qq-upload-icon {
+  display:inline-block; 
+  background: url("uploader.png"); 
+  width:15px; 
+  height:15px; 
+  vertical-align:text-bottom;
+}
+.qq-upload-spinner {
+  display:inline-block; 
+  background: url("loading.gif"); 
+  width:15px; 
+  height:15px; 
+  vertical-align:text-bottom;
+}
 .qq-upload-size,.qq-upload-cancel {font-size:11px;}
 
 .qq-upload-failed-text {display:none;}
