--- a/templates/DebugMessage.html
+++ b/templates/DebugMessage.html
@@ -5,6 +5,8 @@ div.breeze-debug-panel {
   font-weight: 300; 
   font-size: 12pt; 
   margin: 5px;
+  padding: 10px;
+  background-color: #efefef;
   -webkit-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
