--- a/tools/template-web/backend/templates/head.html
+++ b/tools/template-web/backend/templates/head.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>[[config:page-title]]</title>
+  <title>[[config.page-title]]</title>
   <meta name="description" content="[[config.page-description]]">
   <meta name="author" content="[[config.page-author]]">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
