--- a/templates/ErrorReport.html
+++ b/templates/ErrorReport.html
@@ -47,7 +47,7 @@ div.breeze-error-panel div.info-box {
 <div class="breeze-error-panel">
   <div class="wrapper">
     <div class="breeze-error-section">
-      <div class="error"><center><?php echo($errorMessage); ?></center></div>
+      <div class="error"><?php echo($errorMessage); ?></div>
     </div>
   </div>
 </div>
