--- a/tools/template-web/backend/templates/navigation.html
+++ b/tools/template-web/backend/templates/navigation.html
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="{/}" target="_blank">[[config.site-name]]</a>
+      <a class="brand" href="{/}../" target="_blank">[[config.site-name]]</a>
       <div class="nav-collapse">
         <ul class="nav top-nav">
           <li class="nav-item ajax-in-progress invisible">
