--- a/css/bright.css
+++ b/css/bright.css
@@ -130,8 +130,12 @@ input.justified {
   }
   .navbar-fixed-top .navbar-inner {
     padding: 0px;
-    padding-left: 24px;
+    padding-left: 0px;
     padding-right: 24px;
+  }  
+  .navbar-fixed-top .navbar-inner .container-fluid {
+    padding-left: 5px;
+    padding-right: 20px;
   }  
   .shadow-paper-box, .shadow-paper-box-fluid {
     margin-top: 10px !important;
