--- a/css/bright.css
+++ b/css/bright.css
@@ -20,7 +20,7 @@ textarea.justified {
   margin-bottom: 2px;
 }
 
-input.justified {
+input.justified, select.justified {
   width: 100%;
   height: 2em;
   box-sizing: border-box;
