--- a/css/bright.css
+++ b/css/bright.css
@@ -173,14 +173,20 @@ input.justified, select.justified {
   margin-bottom: 5px;
 }
 
-h3 {
+h4 {
   font-size: 18px;
   font-weight: 300;
   margin-bottom: 2px;
 }
 
+h3 {
+  font-size: 20px;
+  font-weight: 300;
+  margin-bottom: 2px;
+}
+
 h2 {
-  font-size: 22px;
+  font-size: 24px;
   font-weight: 300;
   margin-bottom: 2px;
 }
