--- a/css/bright.css
+++ b/css/bright.css
@@ -1,7 +1,3 @@
-.invisible {
-  visibility: hidden;
-}
-
 .template {
   display: none;
 }
@@ -262,4 +258,5 @@ span.required {
 
 li.ajax-in-progress span.icon-spin {
   margin-top: 5px;
+  color: white;
 }
