--- a/css/bright.css
+++ b/css/bright.css
@@ -279,3 +279,8 @@ li.ajax-in-progress span.icon-spin {
 a i:hover, .brand:hover {
   text-decoration: none;
 }
+
+.open>.dropdown-menu.scrollable {
+  overflow-y: auto;
+  max-height: 600px;
+}
