--- a/tools/template-web/backend/templates/users.html
+++ b/tools/template-web/backend/templates/users.html
@@ -52,15 +52,15 @@
       <div class="row-fluid filters-panel" style="display:none;">
         <div class="span12">
           <div class="filter-panel">
-              
+
             <div class="pull-left filter-block">
               <label>Search</label>
               <div class="input-append">
                 <input type="text" class="input-medium data-filter" title="Search by" placeholder="search text" name="keyword" />
                 <button class="btn action-clear-one-filter" rel="keyword" type="button"><i class="icon-remove"></i></button>
-              </div>              
+              </div>
             </div>
-                            
+
           </div>
         </div>
       </div>
@@ -73,9 +73,9 @@
             <thead>
               <th width="10"><input type="checkbox" class="action-select-all" name="checkAll" id="checkAll" title="Check All"/> </th>
               <th></th>
-              <th>Name&nbsp;<i class="sortable icon-chevron-up order-asc" data-field="name"></i><i class="sortable icon-chevron-down order-desc" data-field="name"></i></th>
-              <th>Login&nbsp;<i class="sortable icon-chevron-up order-asc" data-field="login"></i><i class="sortable icon-chevron-down order-desc" data-field="login"></i></th>
-              <th>Email&nbsp;<i class="sortable icon-chevron-up order-asc" data-field="email"></i><i class="sortable icon-chevron-down order-desc" data-field="email"></i></th>
+              <th>Name&nbsp;<i class="sortable icon-sort-by-alphabet order-asc" data-field="name"></i> <i class="sortable icon-sort-by-alphabet-alt order-desc" data-field="name"></i></th>
+              <th>Login&nbsp;<i class="sortable icon-sort-by-alphabet order-asc" data-field="login"></i> <i class="sortable icon-sort-by-alphabet-alt order-desc" data-field="login"></i></th>
+              <th>Email&nbsp;<i class="sortable icon-sort-by-alphabet order-asc" data-field="email"></i> <i class="sortable icon-sort-by-alphabet-alt order-desc" data-field="email"></i></th>
               <th width="10"><a class="action-delete-selected btn btn-mini" title="Delete"><i class="icon-trash"></i></a></th>
             </thead>
             <tbody class="data-table">
@@ -122,6 +122,6 @@
         <a href="javascript:;" class="btn" data-dismiss="modal">Cancel</a>
       </div>
     </div>
-    
+
   </body>
 </html>
