--- a/3rdparty/gritter/css/jquery.gritter.css
+++ b/3rdparty/gritter/css/jquery.gritter.css
@@ -11,46 +11,34 @@
     right: auto;
 }
 #gritter-notice-wrapper.bottom-right {
-    top: auto;
-    left: auto;
-    bottom: 20px;
-    right: 20px;
+  top: auto;
+  left: auto;
+  bottom: 20px;
+  right: 20px;
 }
 #gritter-notice-wrapper.bottom-left {
-    top: auto;
-    right: auto;
-    bottom: 20px;
-    left: 20px;
+  top: auto;
+  right: auto;
+  bottom: 20px;
+  left: 20px;
 }
 .gritter-item-wrapper {
+  /*opacity: 0.8;*/
+  color: white;
+  background-color: red;
+  border-radius: 6px;
+  border: 1px solid red;
 	position:relative;
 	margin:0 0 10px 0;
-	background:url('../images/ie-spacer.gif'); /* ie7/8 fix */ 
-}
-.gritter-top {
-	background:url('../images/gritter.png') no-repeat left -30px;
-	height:10px;
-}
-.hover .gritter-top {
-	background-position:right -30px;
-}
-.gritter-bottom {
-	background:url('../images/gritter.png') no-repeat left bottom;
-	height:8px;
-	margin:0;
-}
-.hover .gritter-bottom {
-	background-position: bottom right;
 }
 .gritter-item {
 	display:block;
-	background:url('../images/gritter.png') no-repeat left -40px;
 	color:#eee;
-	padding:2px 11px 8px 11px;
+	padding:11px 11px 11px 11px;
 	font-size: 10pt;
 }
-.hover .gritter-item {
-	background-position:right -40px;
+.gritter-item-wrapper.hover {
+  /*opacity: 1;*/
 }
 .gritter-item p {
 	padding:0;
@@ -85,26 +73,4 @@
 .gritter-with-image {
 	width:220px;
 	float:right;
-}
-/* for the light (white) version of the gritter notice */
-.gritter-light .gritter-item,
-.gritter-light .gritter-bottom,
-.gritter-light .gritter-top,
-.gritter-close {
-    background-image: url('../images/gritter-light.png');
-    color: #222;
-}
-.gritter-light .gritter-title {
-    text-shadow: none;
-}
-
-.gritter-red .gritter-item,
-.gritter-red .gritter-bottom,
-.gritter-red .gritter-top,
-.gritter-close {
-    background-image: url('../images/gritter-red.png');
-    color: white;
-}
-.gritter-red .gritter-title {
-    text-shadow: none;
 }
