--- a/tools/template-web/backend/templates/pager.html
+++ b/tools/template-web/backend/templates/pager.html
@@ -1,6 +1,6 @@
 <div class="row-fluid pager-row">
   <div class="span8">
-    <small class="pager-control" style="display:none;"><span class="pager-stat"></span></small>
+    <small class="pager-control" style="display:none;"><span class="pager-stat"></span></small> <small><span class="selection-stat label" style="display:none;"></span> <a class="action-clear-selection" style="display:none;">Clear selection</a></small>
     <div class="pager-control pager-page-slider" style="display:none;"></div>
   </div>
   <div class="span4">
@@ -8,4 +8,5 @@
     <div class="pager-control pager-page-size-slider" style="display:none;"></div>
   </div>
 </div>
+
 <br />
