--- a/3rdparty/gritter/css/jquery.gritter.css
+++ b/3rdparty/gritter/css/jquery.gritter.css
@@ -24,6 +24,7 @@
 }
 .gritter-item-wrapper {
   /*opacity: 0.8;*/
+  background-color: #5bb2de;
   color: white;
   border-radius: 6px;
   position:relative;
@@ -31,7 +32,7 @@
 }
 .gritter-item-wrapper.gritter-red {
   /*opacity: 0.8;*/
-  background-color: red;
+  background-color: red !important;
   border: 1px solid red;
 }
 .gritter-item-wrapper.gritter-light {
