--- a/css/bright.css
+++ b/css/bright.css
@@ -303,3 +303,14 @@ a i:hover, .brand:hover {
   overflow-y: auto;
   max-height: 600px;
 }
+
+a.not-a {
+  text-decoration: none;
+  color: black;
+}
+.label.label-thin {
+  font-weight: normal;
+  padding:3px;
+  padding-left:5px;
+  padding-right:5px;
+}
