--- a/tools/template-web/templates/head.html
+++ b/tools/template-web/templates/head.html
@@ -22,7 +22,7 @@
   <script src="{br}3rdparty/bootstrap/js/bootstrap.min.js"></script>
   <script src="{br}3rdparty/handlebars/handlebars.min.js"></script>
   <script src="{br}3rdparty/gritter/js/jquery.gritter.min.js"></script>
-  <script src="{br}js/bright.js"></script>
+  <script src="{br}js/bright.min.js"></script>
   <script src="{/}js/app.js"></script>
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
