--- a/css/bright.css
+++ b/css/bright.css
@@ -240,7 +240,7 @@ h1 small {
   background: url('../images/progress-small.gif') no-repeat 50% 50%;
 }
 
-a, .clickable, label.checkbox {
+a, .clickable, .sortable, label.checkbox {
   cursor: pointer;
 }
 
