--- a/css/bright.css
+++ b/css/bright.css
@@ -318,8 +318,8 @@ a.not-a {
   text-decoration: none;
   color: black;
 }
-.label.label-thin {
-  font-weight: normal;
+.label {
+  font-weight: normal !important;
   padding:3px;
   padding-left:5px;
   padding-right:5px;
