--- a/css/bright.css
+++ b/css/bright.css
@@ -328,3 +328,9 @@ a.not-a {
   padding-left:5px;
   padding-right:5px;
 }
+
+table.table th {
+  text-align: center;
+  vertical-align: middle;
+}
+
