--- a/tools/template-web/backend/templates/navigation.html
+++ b/tools/template-web/backend/templates/navigation.html
@@ -1,26 +1,27 @@
-<div class="navbar navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container-fluid">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-      <a class="brand" href="{/}../" target="_blank">[[config.site-name]]</a>
-      <div class="nav-collapse">
-        <ul class="nav top-nav">
-          <li class="nav-item ajax-in-progress invisible">
-            <img width="24" border="0" src="{br}images/progress-small-light.gif" />
-          </li>
-{$}
-          <li class="nav-item" rel="users"><a href="{/}users">Users</a></li>
-        </ul>
-        <ul class="nav top-nav pull-right">
-           <li class="divider-vertical"></li>
-           <li><a class="action-logout" href="javascript:;">Logout</a></li> 
-{$}
-        </ul>
-      </div>        
-    </div>
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="{/}../" target="_blank">[[config.site-name]]</a>
   </div>
-</div>
+
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+      <li class="nav-item ajax-in-progress invisible">
+        <img width="24" border="0" src="{br}images/progress-small-light.gif" />
+      </li>
+{$}
+      <li class="nav-item" rel="users"><a href="{/}users">Users</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li class="divider-vertical"></li>
+      <li><a><strong>Logged as [[login.name]]</strong></a></li>
+      <li><a class="action-logout" href="javascript:;">Logout</a></li>
+{$}
+    </ul>
+  </div>
+</nav>
