--- a/tools/template-web/backend/templates/users.html
+++ b/tools/template-web/backend/templates/users.html
@@ -4,60 +4,57 @@
 
 {@navigation.html}
 
-    <script class="data-row-template" type="text/template">
-      <tr data-rowid="{{rowid}}">
-        <td width="10"><input type="checkbox" class="action-select-row" value="{{rowid}}" /></td>
-        <td width="10">{{#if __permissions.canUpdate}}<a class="action-edit btn btn-mini" title="Edit"><i class="icon-pencil"></i></a>{{/if}}</td>
-        <td class="editable" data-field="login">{{login}}</td>
-        <td class="editable" data-field="name">{{name}}</td>
-        <td class="editable" data-field="email">{{email}}</td>
-        <td width="10">{{#if __permissions.canUpdate}}<a class="action-delete btn btn-mini" title="Delete"><i class="icon-trash"></i></a>{{/if}}</td>
-      </tr>
-    </script>
+  <script class="data-row-template" type="text/template">
+    <tr data-rowid="{{rowid}}">
+      <td width="10"><input type="checkbox" class="action-select-row" value="{{rowid}}" /></td>
+      <td width="10">{{#if __permissions.canUpdate}}<a class="action-edit btn btn-default btn-xs" title="Edit"><i class="icon-pencil"></i></a>{{/if}}</td>
+      <td class="editable" data-field="login">{{login}}</td>
+      <td class="editable" data-field="name">{{name}}</td>
+      <td class="editable" data-field="email">{{email}}</td>
+      <td width="10">{{#if __permissions.canUpdate}}<a class="action-delete btn btn-default btn-xs" title="Delete"><i class="icon-trash"></i></a>{{/if}}</td>
+    </tr>
+  </script>
 
-    <script class="data-empty-template" type="text/template">
-      <tr>
-        <td colspan="6">
-          <h2 class="centered">No items in this view</h2>
-        </td>
-      </tr>
-    </script>
+  <script class="data-empty-template" type="text/template">
+    <tr>
+      <td colspan="6">
+        <h2 class="centered">No items in this view</h2>
+      </td>
+    </tr>
+  </script>
 
-    <div class="container shadow-paper-box">
+  <div class="container-box">
+    <div class="shadow-paper-box-internal">
 
       <div class="row">
-        <div class="span12">
+        <div class="col-md-12">
           <h1>Users <small class="filter-description"></small></h1>
         </div>
       </div>
 
-      <div class="row">
-        <div class="span12">
-          <div class="navbar navbar-internal navbar-inverse">
-            <div class="navbar-inner">
-              <div class="container">
-                <ul class="nav">
-                  <li><a class="action-create" title="Create"><i class="icon-plus icon-white"></i> Create</a></li>
-                  <li class="divider-vertical"></li>
-                  <li><a class="action-show-hide-filters"><i class="icon-filter icon-white"></i> <span>Hide filters</span></a></li>
-                  <li><a class="action-reset-filters"><i class="icon-remove icon-white"></i> <span>Reset filters</span></a></li>
-                  <li><a class="action-refresh"><i class="icon-refresh icon-white"></i></i> <span>Refresh</span></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
-      <div class="row-fluid filters-panel" style="display:none;">
-        <div class="span12">
+      <nav class="navbar navbar-inverse" role="navigation">
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <ul class="nav navbar-nav">
+          <li style="padding-left:7px;padding-top:3px;"><button class="action-create btn btn-warning navbar-btn" title="Create"><i class="icon-plus icon-white"></i> Create</button></li>
+          <li class="divider-vertical"></li>
+          <li><a class="action-show-hide-filters"><i class="icon-filter icon-white"></i> <span>Hide filters</span></a></li>
+          <li><a class="action-reset-filters"><i class="icon-remove icon-white"></i> <span>Reset filters</span></a></li>
+          <li><a class="action-refresh"><i class="icon-refresh icon-white"></i></i> <span>Refresh</span></a></li>
+        </ul>
+      </nav>
+
+      <div class="row filters-panel" style="display:none;">
+        <div class="col-md-12">
           <div class="filter-panel">
 
-            <div class="pull-left filter-block">
+            <div class="pull-left filter-block" style="width:300px;">
               <label>Search</label>
-              <div class="input-append">
-                <input type="text" class="input-medium data-filter" title="Search by" placeholder="search text" name="keyword" />
-                <button class="btn action-clear-one-filter" rel="keyword" type="button"><i class="icon-remove"></i></button>
+              <div class="input-group">
+                <input type="text" class="form-control data-filter" title="Search by" placeholder="search text" name="keyword" />
+                <span class="input-group-btn">
+                  <button class="btn btn-default action-clear-one-filter" rel="keyword" type="button"><i class="icon-remove"></i></button>
+                </span>
               </div>
             </div>
 
@@ -68,15 +65,15 @@
       {@pager.html}
 
       <div class="row">
-        <div class="span12">
-          <table class="table table-bordered table-condensed table-striped">
+        <div class="col-md-12">
+          <table class="table table-bordered table-condensed table-striped table-hover">
             <thead>
               <th width="10"><input type="checkbox" class="action-select-all" name="checkAll" id="checkAll" title="Check All"/> </th>
               <th></th>
               <th>Name&nbsp;<i class="sortable icon-sort-by-alphabet order-asc" data-field="name"></i> <i class="sortable icon-sort-by-alphabet-alt order-desc" data-field="name"></i></th>
               <th>Login&nbsp;<i class="sortable icon-sort-by-alphabet order-asc" data-field="login"></i> <i class="sortable icon-sort-by-alphabet-alt order-desc" data-field="login"></i></th>
               <th>Email&nbsp;<i class="sortable icon-sort-by-alphabet order-asc" data-field="email"></i> <i class="sortable icon-sort-by-alphabet-alt order-desc" data-field="email"></i></th>
-              <th width="10"><a class="action-delete-selected btn btn-mini" title="Delete"><i class="icon-trash"></i></a></th>
+              <th width="10"><a class="action-delete-selected btn btn-default btn-xs" title="Delete"><i class="icon-trash"></i></a></th>
             </thead>
             <tbody class="data-table">
             </tbody>
@@ -85,43 +82,50 @@
       </div>
 
     </div>
+  </div>
 
-    <div class="modal data-edit-form" style="display:none; max-height:600px; width:620px;">
-      <div class="modal-header">
-        <a class="close" data-dismiss="modal">×</a>
-        <h3 class="operation">Edit</h3>
-      </div>
-      <div class="modal-body">
-        <form onsubmit="return false;">
-          <fieldset>
-             <div class="row">
-                <div class="span3">
-                  <label class="control-label"><span class="required"></span>Name</label>
-                  <input type="text" class="span3 required data-field" name="name" placeholder="name" data-click-on-enter=".action-save">
-                </div>
-                <div class="span3">
-                  <label class="control-label"><span class="required"></span>Login</label>
-                  <input type="text" class="span3 required data-field" name="login" placeholder="login" data-click-on-enter=".action-save">
-                </div>
+  <div class="modal data-edit-form">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <a class="close" data-dismiss="modal">×</a>
+          <h3 class="operation">Edit</h3>
+        </div>
+        <div class="modal-body">
+          <form class="form-horizontal" role="form" action="javascript:;" onsubmit="return false;">
+            <div class="form-group">
+              <label class="col-lg-2 control-label"><span class="required">*</span>Name</label>
+              <div class="col-lg-10">
+                <input type="text" class="form-control required data-field" name="name" placeholder="name" title="Name" data-click-on-enter=".action-save">
               </div>
-              <div class="row">
-                <div class="span3">
-                  <label class="control-label"><span class="required"></span>E-mail</label>
-                  <input type="text" class="span3 data-field" name="email" placeholder="email" data-click-on-enter=".action-save">
-                </div>
-                <div class="span3">
-                  <label class="control-label"><span class="required"></span>Password</label>
-                  <input type="text" class="span3 data-field" name="password" placeholder="password" data-click-on-enter=".action-save">
-                </div>
+            </div>
+            <div class="form-group">
+              <label class="col-lg-2 control-label"><span class="required">*</span>Login</label>
+              <div class="col-lg-10">
+                <input type="text" class="form-control required data-field" name="login" placeholder="login" title="Login" data-click-on-enter=".action-save">
               </div>
-          </fieldset>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <a href="javascript:;" class="btn btn-primary action-save">Save</a>
-        <a href="javascript:;" class="btn" data-dismiss="modal">Cancel</a>
+            </div>
+            <div class="form-group">
+              <label class="col-lg-2 control-label">E-mail</label>
+              <div class="col-lg-10">
+                <input type="text" class="form-control data-field" name="email" placeholder="E-mail" title="E-Mail" data-click-on-enter=".action-save">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-lg-2 control-label"><span class="required">*</span>Password</label>
+              <div class="col-lg-10">
+                <input type="password" class="form-control required data-field" name="password" placeholder="password" title="Password" data-click-on-enter=".action-save">
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <a href="javascript:;" class="btn btn-primary action-save">Save</a>
+          <a href="javascript:;" class="btn btn-default" data-dismiss="modal">Cancel</a>
+        </div>
       </div>
     </div>
+  </div>
 
   </body>
 </html>
