--- a/css/bright.css
+++ b/css/bright.css
@@ -334,3 +334,18 @@ table.table th {
   vertical-align: middle;
 }
 
+/* bootstrap3 */
+.form-control.select2-container {
+  padding:0px;
+  border:0px;
+}
+
+.form-control.select2-container .select2-choice {
+  height:33px;
+  padding-top: 3px;
+}
+
+.form-control.select2-container .select2-choice div {
+  height:33px;
+  padding-top: 3px;
+}
