--- a/css/bright.css
+++ b/css/bright.css
@@ -116,7 +116,7 @@ td.optimal-width, th.optimal-width {
 
 .shadow-paper-box {
   margin: 0px auto;
-  margin-top: 50px;
+  margin-top: 60px;
   margin-bottom: 20px;
   padding: 30px;
   background: white;
@@ -138,7 +138,7 @@ td.optimal-width, th.optimal-width {
 
 .shadow-paper-box-fluid {
   margin: 0px 10px;
-  margin-top: 50px;
+  margin-top: 60px;
   margin-bottom: 20px;
   padding: 30px;
   background: white;
@@ -147,8 +147,23 @@ td.optimal-width, th.optimal-width {
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
+.br-scrollable {
+  height: 100%;
+  overflow: auto;
+}
+@media print {
+  .br-container {
+    margin-top: 0px !important;
+    height: auto !important;
+  }
+  .br-scrollable {
+    height: auto;
+    overflow: visible;
+  }
+}
+
 .container-box {
-  margin-top: 55px;
+  margin-top: 60px;
 }
 
 .fluid-box {
@@ -223,7 +238,7 @@ h2 {
   font-size: 24px;
   font-weight: 300;
   margin-top: 5px;
-  margin-bottom: 2px;
+  margin-bottom: 5px;
 }
 
 h1 {
