--- a/css/bright.css
+++ b/css/bright.css
@@ -388,3 +388,7 @@ table.table th {
     display: inline;
   }
 }
+
+.uppercase {text-transform:uppercase;}
+.lowercase {text-transform:lowercase;}
+.capitalize {text-transform:capitalize;}
