--- a/tools/template-web/backend/templates/login.html
+++ b/tools/template-web/backend/templates/login.html
@@ -1,6 +1,6 @@
 {@head.html}
 
-<body class="pattern-carbon">
+<body>
 
 {@navigation.html}
 
@@ -13,6 +13,7 @@
             <h3>Login</h3>
           </div>
           <div class="modal-body">
+            <div class="alert alert-danger login-error" style="display:none;"></div>
             <form class="form-horizontal" role="form" action="javascript:;" onsubmit="return false;">
               <div class="form-group">
                 <label class="col-lg-2 control-label">Login</label>
@@ -47,5 +48,4 @@
   </div>
 </div>
 
-</body>
-</html>
+{@footer.html}
