--- a/tools/template-web/backend/templates/users.html
+++ b/tools/template-web/backend/templates/users.html
@@ -1,6 +1,6 @@
 {@head.html}
 
-  <body class="pattern-carbon">
+<body>
 
 {@navigation.html}
 
@@ -23,8 +23,8 @@
     </tr>
   </script>
 
-  <div class="container-box">
-    <div class="shadow-paper-box-internal">
+  <div class="container">
+    <div class="shadow-paper-box-internal1">
 
       <div class="row">
         <div class="col-md-12">
@@ -36,7 +36,7 @@
       <nav class="navbar navbar-inverse" role="navigation">
         <!-- Collect the nav links, forms, and other content for toggling -->
         <ul class="nav navbar-nav">
-          <li style="padding-left:7px;padding-top:3px;"><button class="action-create btn btn-warning navbar-btn" title="Create"><i class="icon-plus icon-white"></i> Create</button></li>
+          <li style="padding-left:7px;"><button class="action-create btn btn-warning navbar-btn" title="Create"><i class="icon-plus icon-white"></i> Create</button></li>
           <li class="divider-vertical"></li>
           <li><a class="action-show-hide-filters"><i class="icon-filter icon-white"></i> <span>Hide filters</span></a></li>
           <li><a class="action-reset-filters"><i class="icon-remove icon-white"></i> <span>Reset filters</span></a></li>
@@ -127,5 +127,4 @@
     </div>
   </div>
 
-  </body>
-</html>
+{@footer.html}
