--- a/tools/template-web/backend/templates/navigation.html
+++ b/tools/template-web/backend/templates/navigation.html
@@ -1,18 +1,18 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="{/}../" target="_blank">[[config.site-name]]</a>
-  </div>
-
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="{/}../" target="_blank">[[config.site-name]]</a>
+    </div>
+    <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav">
       <li class="nav-item ajax-in-progress invisible">
-        <img width="24" border="0" src="{br}images/progress-small-light.gif" />
+        <img width="24" border="0" src="{br}images/progress-small.gif" style="padding-top:5px;" />
       </li>
 {$}
       <li class="nav-item" rel="users"><a href="{/}users">Users</a></li>
@@ -23,5 +23,6 @@
       <li><a class="action-logout" href="javascript:;">Logout</a></li>
 {$}
     </ul>
+    </div><!--/.navbar-collapse -->
   </div>
-</nav>
+</div>
