--- a/tools/template-web/backend/templates/footer.html
+++ b/tools/template-web/backend/templates/footer.html
@@ -1,5 +1,5 @@
   <!--[if lt IE 8]>
-    <script src="{/}js/json2.js"></script>
+    <script src="{br}3rdparty/json2/json2.js"></script>
   <![endif]-->
 
   <script src="{br}3rdparty/jquery/jquery-1.7.1.min.js"></script>
