--- a/css/bright-bootstrap3.css
+++ b/css/bright-bootstrap3.css
@@ -302,7 +302,9 @@ span.required {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  overflow: hidden;
+  /*overflow: hidden;*/
+  display: inline-block;
+  width: 100%;
 }
 
 .filter-block {
