--- a/css/bright-bootstrap2.css
+++ b/css/bright-bootstrap2.css
@@ -392,3 +392,18 @@ table.table th {
 .uppercase {text-transform:uppercase;}
 .lowercase {text-transform:lowercase;}
 .capitalize {text-transform:capitalize;}
+
+.pager-nav-element,.pager-size-element {
+  padding:1px;
+  padding-left:3px;
+  padding-right:3px;
+}
+a.pager-nav-element:hover,a.pager-size-element:hover {
+  text-decoration: none;
+  padding:0px;
+  padding-left:2px;
+  padding-right:2px;
+  border: 1px solid #AAA;
+  border-radius: 3px;
+  color:none;
+}
