--- a/css/bright.css
+++ b/css/bright.css
@@ -296,9 +296,10 @@ span.required {
 }
 
 .filter-panel {
-  /*color: black;*/
   min-height: 20px;
-  padding: 19px;
+  padding: 10px;
+  padding-top: 6px;
+  padding-bottom: 6px;
   margin-bottom: 10px;
   border: 1px solid #eee;
   border: 1px solid rgba(0, 0, 0, 0.05);
@@ -308,7 +309,12 @@ span.required {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  overflow: hidden;
+}
+
+.filter-panel:after {
+  content:"";
+  clear:both;
+  display:block;
 }
 
 .filter-block {
