--- a/css/bright-bootstrap2.css
+++ b/css/bright-bootstrap2.css
@@ -296,11 +296,11 @@ span.required {
 }
 
 .filter-panel {
-  /*color: black;*/
   min-height: 20px;
-  padding: 19px;
+  padding: 10px;
+  padding-top: 6px;
+  padding-bottom: 6px;
   margin-bottom: 10px;
-  /*background-color: #Fc3;*/
   border: 1px solid #eee;
   border: 1px solid rgba(0, 0, 0, 0.05);
   -webkit-border-radius: 4px;
@@ -309,7 +309,12 @@ span.required {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  overflow: hidden;
+}
+
+.filter-panel:after {
+  content:"";
+  clear:both;
+  display:block;
 }
 
 .filter-block {
