--- a/css/bright-bootstrap2.css
+++ b/css/bright-bootstrap2.css
@@ -357,8 +357,8 @@ a i:hover, .brand:hover {
 }
 
 a.not-a {
-  text-decoration: none;
-  color: inherit;
+  text-decoration: none !important;
+  color: inherit !important;
 }
 a.btn-url {
   text-decoration: none;
