--- a/templates/DebugMessage.html
+++ b/templates/DebugMessage.html
@@ -14,9 +14,13 @@ div.bright-debug-panel {
   clear:both;
 }
 div.bright-debug-panel div.title {
-  font-size: 12pt;
+  font-size: 10pt;
   border-bottom: 1px solid #aaa;
   margin-bottom: 10px;
+}
+div.bright-debug-panel pre {
+  font-size: 8pt;
+  line-height: 10pt;
 }
 
 </style>
