--- a/tools/template-web/backend/templates/footer.html
+++ b/tools/template-web/backend/templates/footer.html
@@ -3,7 +3,7 @@
   <![endif]-->
 
   <script src="{br}3rdparty/jquery/jquery-1.7.1.min.js"></script>
-  <script src="{br}3rdparty/jquery-ui/js/jquery-ui.js"></script>
+  <script src="{br}3rdparty/jquery-ui/1.8.7/js/jquery-ui.js"></script>
   <script src="{br}3rdparty/bootstrap/2.3.2/js/bootstrap.min.js"></script>
   <script src="{br}3rdparty/handlebars/js/handlebars.min.js"></script>
   <script src="{br}3rdparty/gritter/js/jquery.gritter.min.js"></script>
