--- a/tools/template-web/backend/templates/head.html
+++ b/tools/template-web/backend/templates/head.html
@@ -10,7 +10,7 @@
   <link href="{br}3rdparty/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="{br}3rdparty/fontawesome/3.0.2/css/font-awesome.min.css" rel="stylesheet">
   <link href="{br}3rdparty/gritter/css/jquery.gritter.css" rel="stylesheet">
-  <link href="{br}3rdparty/jquery-ui/css/ui-lightness/jquery-ui-1.8.16.custom.css" rel="stylesheet">
+  <link href="{br}3rdparty/jquery-ui/1.8.7/css/ui-lightness/jquery-ui-1.8.16.custom.css" rel="stylesheet">
   <link href="{br}css/bright-bootstrap3.css" rel="stylesheet">
   <link href="{/}css/styles.css" rel="stylesheet">
 </head>
