--- a/templates/DebugMessage.html
+++ b/templates/DebugMessage.html
@@ -25,6 +25,7 @@ div.bright-debug-panel div.info-box {
   background-color: #FEFEFE;
   border: 1px solid #EFEFEF;
   white-space: pre;
+  font-family: Courier;
 }
 div.bright-debug-panel pre {
   font-size: 8pt;
