--- a/templates/ErrorMessage.html
+++ b/templates/ErrorMessage.html
@@ -21,6 +21,7 @@ div.bright-error-panel div.error {
   color: red;
 }
 div.bright-error-panel div.info-box {
+  font-family: Courier;
   padding: 10px;
   background-color: #FEFEFE;
   border: 1px solid #EFEFEF;
