--- a/templates/DebugMessage.html
+++ b/templates/DebugMessage.html
@@ -4,38 +4,36 @@ div.bright-debug-panel {
   font-family: Helvetica,Arial,sans-serif;
   font-weight: 300;
   font-size: 10pt;
-  margin: 5px;
-  background: #FFC;
-  border:1px solid #EFEFEF;
+  margin: 4px;
+  background-color: #DDD;
+  border: 1px solid #EFEFEF;
   z-index: 1000;
   color: black;
 }
-div.bright-debug-panel div.wrapper {
-  padding: 10px;
+div.bright-debug-panel-wrapper {
+  padding: 4px;
 }
 div.bright-debug-panel div.bright-debug-section {
-  padding: 5px;
+  padding: 4px;
 }
 div.bright-debug-panel div.title {
   font-size: 12pt;
   margin-bottom: 4px;
 }
 div.bright-debug-panel div.info-box {
+  font-family: Courier;
   padding: 10pt;
   background-color: #FEFEFE;
-  border: 1px solid #EFEFEF;
-  white-space: pre;
-  font-family: Courier;
-}
-div.bright-debug-panel pre {
-  font-size: 8pt;
-  line-height: 10pt;
+  border: 1px solid #AAA;
+  white-space: pre-wrap;
+  word-break: break-word;
+  line-height: 12pt;
 }
 
 </style>
 
 <div class="bright-debug-panel">
-  <div class="wrapper">
+  <div class="bright-debug-panel-wrapper">
     <div class="bright-debug-section">
       <div class="title">Debug message:</div>
       <div class="info-box"><?php print_r($message); ?></div>
