--- a/css/bright-bootstrap2.css
+++ b/css/bright-bootstrap2.css
@@ -394,6 +394,8 @@ a.btn-url {
 table.table th {
   text-align: center;
   vertical-align: middle;
+  font-weight: 400;
+  line-height: 1.3em;
 }
 
 /* bootstrap3 */
